--- a/data/sql import Scenarios table.ipynb
+++ b/data/sql import Scenarios table.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -29,18 +29,21 @@
       "text/plain": [
        "date                           object\n",
        "Month                          object\n",
-       "Year                            int64\n",
+       "Year                          float64\n",
        "DIS                           float64\n",
        "ideal_earning                 float64\n",
-       "ideal_compound_earning_adj    float64\n",
        "ideal_compound_earning        float64\n",
+       "ideal_compound_earning_adj    float64\n",
+       "ml                            float64\n",
+       "ml_earning                    float64\n",
+       "ml_earning_adj                float64\n",
        "snp500                        float64\n",
        "snp500_earning                float64\n",
        "snp500_earning_adj            float64\n",
        "dtype: object"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -51,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,18 +81,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Jeff\\Anaconda3\\lib\\site-packages\\sqlalchemy\\engine\\default.py:507: Warning: (3719, \"'utf8' is currently an alias for the character set UTF8MB3, which will be replaced by UTF8MB4 in a future release. Please consider using UTF8MB4 in order to be unambiguous.\")\n",
-      "  cursor.execute(statement, parameters)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df.to_sql('scenarios', con=engine)"
    ]
@@ -118,7 +112,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
